5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1876_1641.log
== TEST (2019-07-03 18:50:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
cont = shape(vetor)
acumu = zeros(cont, dtype=int)
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for i in range(x)
	if(vetor[i] >= 5)
		g = g + 1
print(g)
-- ERROR:
File "XXXX", line 14
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:50:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
cont = shape(vetor)
acumu = zeros(cont, dtype=int)
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for i in range(x):
	if(vetor[i] >= 5)
		g = g + 1
print(g)
-- ERROR:
File "XXXX", line 15
    if(vetor[i] >= 5)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:50:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
cont = shape(vetor)
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for i in range(x):
	if(vetor[i] >= 5):
		g = g + 1
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:50:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
cont = shape(vetor)
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for i in range(x):
	if(vetor[i] >= 5):
		g = g + 1
print(g)
-- EXECUTION TIME:
1.10798
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
4
[5 7 8 9]
---- user output:
11
11
-- TEST CASE 2:
---- input:
[15,20,30,15,36,63,25,10,2]
---- correct output:
5
[0 2 3 4 5]
---- user output:
8
8
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[3 4 5]
---- user output:
8
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:51:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for i in range(x):
	if(vetor[i] >= 5):
		g = g + 1
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:52:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for i in range(x):
	if(vetor[i] >= 5):
		delta[i] = j
		g = g + 1
print(delta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:52:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for i in range(x):
	if(vetor[i] >= 5):
		delta[i] = i
		g = g + 1
print(delta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:53:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for i in range(x):
	if(vetor[j] >= 5):
		delta[j] = j
		g = g + 1
print(delta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for j in range(x):
	if(vetor[j] >= 5):
		delta[j] = j
		g = g + 1
print(delta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
for i in range(x):
	if(vetor[i] >= 5):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for j in range(x):
	if(vetor[j] >= 5):
		delta[g] = j
		g = g + 1
print(delta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
for i in range(x):
	if(vetor[i] % 3 = 0):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for j in range(x):
	if(vetor[j] % 3 = 0):
		delta[g] = j
		g = g + 1
print(delta)
-- ERROR:
File "XXXX", line 7
    if(vetor[i] % 3 = 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
for i in range(x):
	if(vetor[i] % 3 == 0):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for j in range(x):
	if(vetor[j] % 3 == 0):
		delta[g] = j
		g = g + 1
print(delta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:02:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("qual o valor? ")))
x = size(vetor)
y = 0
for i in range(x):
	if(vetor[i] % 3 == 0):
		y = y + 1
print(y)
delta = zeros(y, dtype=int)
g = 0
for j in range(x):
	if(vetor[j] % 3 == 0):
		delta[g] = j
		g = g + 1
print(delta)
-- EXECUTION TIME:
1.13368
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
4
[5 7 8 9]
---- user output:
4
[5 7 8 9]
-- TEST CASE 2:
---- input:
[15,20,30,15,36,63,25,10,2]
---- correct output:
5
[0 2 3 4 5]
---- user output:
5
[0 2 3 4 5]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[3 4 5]
---- user output:
3
[3 4 5]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
